fix scrollbar on FF

--- a/src/sidebar/Sidebar.module.scss
+++ b/src/sidebar/Sidebar.module.scss
@@ -91,6 +91,7 @@
     align-items: center;
     margin-bottom: 7.7rem;
     padding: 1rem 1rem;
+    scrollbar-width: none;
   }
   .separator {
     margin-bottom: 0.7rem;
